tweaks to reset weird ion/cordova styling issue

--- a/staRt/www/states/root/profiles/card-templates/card-profile.html
+++ b/staRt/www/states/root/profiles/card-templates/card-profile.html
@@ -63,9 +63,9 @@
 			</label>
 
 			<label class="input item-input">
-				<div class="input-label">
+<!-- 				<div class="input-label">
 					Sex
-				</div>
+				</div> -->
 				<ion-radio
 					name="sex"
 					ng-model="data.currentProfile.gender"
