--- a/staRt/www/states/root/profiles/card-templates/card-recordings.html
+++ b/staRt/www/states/root/profiles/card-templates/card-recordings.html
@@ -24,25 +24,23 @@
 	</div>
 
 <div class="card-foot">
-	<div class="button-row">
-		<div class="column-div">
-			<button
-				class="button button-calm column-div"
-				ng-click="uploadSelectedRecordings()"
-				ng-disabled="!data.selectedProfileRecordings.length || uploadCount > 0" >
-				Upload
-			</button>
-		</div>
-		<div class="column-div">
-			<button
-				class="button button-stable column-div"
-				ng-click="deleteSelectedRecordings()"
-				ng-disabled="!data.selectedProfileRecordings.length || uploadCount > 0" >
-				<i class="icon ion-trash-b"></i>
-				Delete
-			</button>
-		</div>
-	</div>
+	<!-- <div class="column-div"> -->
+		<button
+			class="button button-calm column-div"
+			ng-click="uploadSelectedRecordings()"
+			ng-disabled="!data.selectedProfileRecordings.length || uploadCount > 0" >
+			Upload
+		</button>
+	<!-- </div> -->
+	<!-- <div class="column-div"> -->
+		<button
+			class="button button-stable column-div"
+			ng-click="deleteSelectedRecordings()"
+			ng-disabled="!data.selectedProfileRecordings.length || uploadCount > 0" >
+			<i class="icon ion-trash-b"></i>
+			Delete
+		</button>
+	<!-- </div> -->
 </div>
 
 
