WIP profiles list sent out for SLP review

--- a/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
+++ b/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
@@ -4,7 +4,7 @@
 		<div class="header-img"></div>
 
 		<div class="closeBtn-row">
-			<div class="closeBtn">X</div>
+			<!-- <div class="closeBtn">X</div> -->
 		</div>
 
 		<div class="title-row">
@@ -42,7 +42,7 @@
 								{{profile.name}}
 							</div>
 							<div class="testerIcon"
-							ng-if="!profile.formalTester">
+							ng-if="profile.formalTester">
 							</div>
 						</div>
 				</ion-radio>
