--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -25,7 +25,9 @@
 			<!-- if NO currentUser, msg -->
 			<!-- if currentUser, card -->
 
-			<div class="profiles-card">
+			<div class="profiles-card"
+			ng-hide="!data.currentProfile">
+
 				<div class="card-head">
 
 					<div class="card-headBox">
